--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ install:
   - pip install coverage
   - pip install coveralls
 
-script: coverage run --source=mortgagekit python setup.py test
+script: coverage run --source=mortgagekit setup.py test
 
 after_success:
   coveralls
